[package]
name = "qliber"
version = "0.1.0"
edition = "2024"
description = "A Rust reimagination of Microsoft's Qlib for quantitative research"
authors = ["Qlib Rust Port Team"]
license = "Apache-2.0"
repository = "https://github.com/microsoft/qlib"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
polars = { version = "0.34", features = ["lazy", "csv", "temporal", "dtype-date", "dtype-datetime"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter", "time"] }

[dev-dependencies]
approx = "0.5"
tempfile = "3.10"
